@@ -1,3 +1,11 @@
+2009-03-26 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* gen-md-tests.c: Add tables-header and set-bit helpers.
+
+	* cli-tables-tests.md: New tests for the cli tables.
+
+	* Makefile: Add new tests.
+
 2009-03-24 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* gen-md-tests.c: Add stream-header and cli-metadata
